--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
 #Mon Jan 26 17:48:47 GMT 2015
-CURRENT_VERSION=0.8.1
+CURRENT_VERSION=0.8.0
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=
+NEW_VERSION=0.8.1
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.8.0
+PREVIOUS_VERSION=
 PREVIOUS_DESCRIPTION_HASH=
