Fix #3 Removed IDEA project files from Git

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,19 @@
-/build/classes
-/build/dependency-cache
-/build/libs
-/build/test-results
-/build/tmp
-/logs
-/bin
 /.gradle
-settings.gradle~
-build.gradle~
-.gitignore~
-/build
+/.idea
 /.settings
+/bin
+/build
+/gradle
+/logs
+
+/.krail-testUtil.iml
+
+build.gradle~
+git.ignore~
 README.md~
-.idea/workspace.xml
-.idea/tasks.xml
+
+/.classpath
+/.project
+/.gradle
 /error-screenshots
-*.properties~
-
-
-
-.idea/libraries/
-
-gradle
-
 derby.log
