--- a/version.properties
+++ b/version.properties
@@ -3,7 +3,7 @@
 CURRENT_VERSION=0.8.1
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=
+NEW_VERSION=0.8.2
 NEW_DESCRIPTION_HASH=
 PREVIOUS_VERSION=0.8.0
 PREVIOUS_DESCRIPTION_HASH=
