--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
-#Tue Jan 27 17:17:12 GMT 2015
-CURRENT_VERSION=0.8.1
+#Sat Jan 31 19:14:50 GMT 2015
+CURRENT_VERSION=0.8.2
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=0.8.2
+NEW_VERSION=
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.8.0
+PREVIOUS_VERSION=0.8.1
 PREVIOUS_DESCRIPTION_HASH=
