--- a/version.properties
+++ b/version.properties
@@ -1,7 +1,7 @@
 #written by automated build - only the new version should be amended by hand
-#Mon Feb 16 17:57:28 GMT 2015
+#Sun Mar 01 21:16:30 GMT 2015
 CURRENT_VERSION=0.8.3
-UPDATED_VERSION=
+UPDATED_VERSION=0.8.4
 CURRENT_DESCRIPTION_HASH=
 NEW_VERSION=
 NEW_DESCRIPTION_HASH=
