--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
-#Sun Mar 01 21:16:30 GMT 2015
+#Sun Mar 01 21:30:25 GMT 2015
 CURRENT_VERSION=0.8.3
-UPDATED_VERSION=0.8.4
+UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
 NEW_VERSION=
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.8.2
+PREVIOUS_VERSION=0.8.3
 PREVIOUS_DESCRIPTION_HASH=
