--- a/version.properties
+++ b/version.properties
@@ -1,7 +1,7 @@
 #written by automated build - only the new version should be amended by hand
-#Sat Mar 14 11:26:34 GMT 2015
+#Sat Mar 21 16:43:05 GMT 2015
 CURRENT_VERSION=0.8.5
-UPDATED_VERSION=
+UPDATED_VERSION=0.8.6
 CURRENT_DESCRIPTION_HASH=
 NEW_VERSION=
 NEW_DESCRIPTION_HASH=
