--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
-#Sat Mar 21 16:43:05 GMT 2015
+#Sat Mar 21 17:09:14 GMT 2015
 CURRENT_VERSION=0.8.5
-UPDATED_VERSION=0.8.6
+UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
 NEW_VERSION=
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.8.4
+PREVIOUS_VERSION=0.8.5
 PREVIOUS_DESCRIPTION_HASH=
