--- a/version.properties
+++ b/version.properties
@@ -14,7 +14,7 @@
 CURRENT_VERSION=0.8.6
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=
+NEW_VERSION=0.8.7
 NEW_DESCRIPTION_HASH=
 PREVIOUS_VERSION=0.8.5
 PREVIOUS_DESCRIPTION_HASH=
