--- a/version.properties
+++ b/version.properties
@@ -1,7 +1,7 @@
 #written by automated build - only the new version should be amended by hand
-#Tue Jun 02 20:21:58 BST 2015
+#Sun Jun 14 20:50:46 BST 2015
 CURRENT_VERSION=0.8.9
-UPDATED_VERSION=
+UPDATED_VERSION=0.8.10
 CURRENT_DESCRIPTION_HASH=
 NEW_VERSION=
 NEW_DESCRIPTION_HASH=
