--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
-#Sun Jun 14 20:50:46 BST 2015
+#Sun Jun 14 20:53:36 BST 2015
 CURRENT_VERSION=0.8.9
-UPDATED_VERSION=0.8.10
+UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
 NEW_VERSION=
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.8.8
+PREVIOUS_VERSION=0.8.9
 PREVIOUS_DESCRIPTION_HASH=
