--- a/version.properties
+++ b/version.properties
@@ -14,7 +14,7 @@
 CURRENT_VERSION=0.8.10
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=
+NEW_VERSION=0.9.0
 NEW_DESCRIPTION_HASH=
 PREVIOUS_VERSION=0.8.9
 PREVIOUS_DESCRIPTION_HASH=
