Updated version and version description

--- a/version.properties
+++ b/version.properties
@@ -3,7 +3,7 @@
 CURRENT_VERSION=0.9.0
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=
+NEW_VERSION=0.9.1
 NEW_DESCRIPTION_HASH=
 PREVIOUS_VERSION=0.8.10
 PREVIOUS_DESCRIPTION_HASH=
