--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
-#Sun Aug 09 23:34:40 BST 2015
-CURRENT_VERSION=0.9.0
+#Wed Dec 30 15:28:34 GMT 2015
+CURRENT_VERSION=0.9.1
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=0.9.1
+NEW_VERSION=
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.8.10
+PREVIOUS_VERSION=0.9.0
 PREVIOUS_DESCRIPTION_HASH=
