--- a/version.properties
+++ b/version.properties
@@ -1,9 +1,9 @@
 #written by automated build - only the new version should be amended by hand
-#Sat Feb 13 15:16:58 GMT 2016
-CURRENT_VERSION=0.9.1
+#Sat Feb 13 15:21:26 GMT 2016
+CURRENT_VERSION=0.9.2
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=0.9.2
+NEW_VERSION=
 NEW_DESCRIPTION_HASH=
-PREVIOUS_VERSION=0.9.0
+PREVIOUS_VERSION=0.9.1
 PREVIOUS_DESCRIPTION_HASH=
