--- a/version.properties
+++ b/version.properties
@@ -3,7 +3,7 @@
 CURRENT_VERSION=0.9.2
 UPDATED_VERSION=
 CURRENT_DESCRIPTION_HASH=
-NEW_VERSION=
+NEW_VERSION=0.9.3
 NEW_DESCRIPTION_HASH=
 PREVIOUS_VERSION=0.9.1
 PREVIOUS_DESCRIPTION_HASH=
