--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,10 @@ dependencies {
     //groovy
     compile 'org.codehaus.groovy:groovy-all:' + groovyVersion
 
+    compile 'com.vaadin.addon:jpacontainer:3.1.1' //JPA container
+
     //krail
-    compile 'uk.q3c.krail:krail:0.9.10.9'
+    compile 'uk.q3c.krail:krail:0.9.10.10'
 
     //Data stores
     compile 'org.hsqldb:hsqldb:2.3.2'
