--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,10 @@ dependencies {
     compile 'com.vaadin.addon:jpacontainer:3.1.1' //JPA container
 
     //krail
-    compile 'uk.q3c.krail:krail:0.9.10.17'
+    compile 'uk.q3c.krail:krail-option-persist-api:0.10.0.0.e44919f'
+    compile 'uk.q3c.krail:krail-i18n-persist-api:0.9.1.0.9a52d0d'
+    compile 'uk.q3c.krail:krail-config-api:0.9.0.1.1a175d3'
+//    compile 'uk.q3c.krail:krail:0.9.10.17'
 
     //Data stores
     compile 'org.hsqldb:hsqldb:2.3.2'
@@ -95,6 +98,7 @@ dependencies {
     testCompile 'org.spockframework:spock-guice:1.0-groovy-2.4'
     testCompile 'cglib:cglib-nodep:3.2.0' // needed for Spock mocking
     testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.12.0'
+    testCompile 'uk.q3c.krail:krail:0.9.10.18'
 
 }
 
