--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     compile 'com.vaadin.addon:jpacontainer:3.1.1' //JPA container
 
     //krail
-    compile 'uk.q3c.krail:krail-option-persist-api:0.10.0.0.e44919f'
+    compile 'uk.q3c.krail:krail-option-api:0.10.0.0.57bb5da'
     compile 'uk.q3c.krail:krail-i18n-persist-api:0.9.1.0.9a52d0d'
     compile 'uk.q3c.krail:krail-config-api:0.9.0.1.1a175d3'
 //    compile 'uk.q3c.krail:krail:0.9.10.17'
