--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@
  *
  */
 buildscript {
-    ext.kotlin_version = '1.1.4-2'
+    ext.kotlin_version = '1.1.4-3'
     ext.kaytee_plugin_version = "0.18.2.0"
     repositories {
         jcenter()
@@ -71,8 +71,6 @@ dependencies {
     //groovy
     compile 'org.codehaus.groovy:groovy-all:' + groovyVersion
 
-    compile 'com.vaadin.addon:jpacontainer:3.1.1' //JPA container
-
     //krail
     compile 'uk.q3c.krail:krail-option-api:0.14.0.0.779c3d4'
     compile 'uk.q3c.krail:krail-config-api:0.9.0.1.1a175d3'
@@ -85,7 +83,7 @@ dependencies {
     //JPA
     compile 'org.eclipse.persistence:eclipselink:2.6.3' //    Eclipse Link &  Java Persistence API
 //    compile 'org.apache.onami:org.apache.onami.common:1.0.1'
-    compile 'com.vaadin.addon:jpacontainer:3.1.1' //JPA container
+    compile 'com.vaadin.addon:jpacontainer:4.0.0' //JPA container only needed while using vaadin 7 compatibility
     compile 'javax.transaction:jta:1.1'
 
     //servlet
@@ -101,7 +99,7 @@ dependencies {
     testCompile 'org.spockframework:spock-guice:1.0-groovy-2.4'
     testCompile 'cglib:cglib-nodep:3.2.0' // needed for Spock mocking
     testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.12.0'
-    testCompile 'uk.q3c.krail:krail:0.10.2.0'
+    testCompile 'uk.q3c.krail:krail:0.11.0.0-v7compat+1'
 
 }
 
