--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,9 @@ sourceCompatibility = '1.8'
 
 kaytee {
     version {
-        number = "0.10.1.0"
+        number = "0.11.0.0"
+        qualifier = "v7compat"
+        buildMetaData = "1"
     }
     changelog {
         maxVersions = 5
