--- a/build.gradle
+++ b/build.gradle
@@ -72,8 +72,8 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:' + groovyVersion
 
     //krail
-    compile 'uk.q3c.krail:krail-option-api:0.14.0.0.779c3d4'
-    compile 'uk.q3c.krail:krail-config-api:0.9.0.1.1a175d3'
+    compile 'uk.q3c.krail:krail-option-api:0.16.0.0'
+    compile 'uk.q3c.krail:krail-config-api:0.10.2.0'
 //    compile 'uk.q3c.krail:krail:0.9.10.17'
 
     //Data stores
@@ -99,7 +99,7 @@ dependencies {
     testCompile 'org.spockframework:spock-guice:1.0-groovy-2.4'
     testCompile 'cglib:cglib-nodep:3.2.0' // needed for Spock mocking
     testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.12.0'
-    testCompile 'uk.q3c.krail:krail:0.13.0.0-v7compat+1'
+    testCompile 'uk.q3c.krail:krail:0.14.0.0'
 
 }
 
